--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>peerflix server</title>
+  <title>TECH SHALA</title>
   <meta name="description" content="peerflix server">
   <meta name="viewport" content="width=device-width">
   <link rel="shortcut icon" href="favicon.ico?new" />
@@ -17,7 +17,16 @@
   <!-- endbuild -->
 </head>
 <body ng-app="peerflixServerApp">
-    <!-- Add your site or application content here -->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-7022520667215360"
+     data-ad-slot="1100511378"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div class="container" ng-view=""></div>
 
     <!-- build:js scripts/vendor.js -->
